--- a/package.json
+++ b/package.json
@@ -17,14 +17,33 @@
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
+		"date-fns": "^2.30.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.344.0",
 		"mongoose": "^8.5.1",
 		"postcss": "^8.5.3",
+		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.3.1",
 		"tailwindcss": "^4.0.14"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.9"
+		"@eslint/js": "^9.9.1",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^9.9.1",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.11",
+		"globals": "^15.9.0",
+		"nodemon": "^3.1.9",
+		"postcss": "^8.4.35",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^8.3.0",
+		"vite": "^6.2.2"
 	}
 }
